# livewire

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.codex/: project-memory.md
clients/: __init__.py  bronze_client.py  daily_bar_fallback.py  db_client.py  fred_client.py  historical_provider.py  ib_client.py  ib_gateway_preflight.py  ingestion_common.py  intraday_bronze_client.py  massive_client.py  massive_flatfile_client.py  postgres_client.py  postgres_schema.py  quality_detector.py  quality_flags.py  telemetry.py  timeframe_aggregator.py  trading_calendar.py  uw_client.py
docs/: ib_tws_api.md  massive_endpoint_probe_log.md  massive_fundamentals_coverage.md
launchd/: com.livewire.daily-update-watchdog.plist.example  com.livewire.daily-update.plist.example  com.market-warehouse.daily-update-watchdog.plist.example  com.market-warehouse.daily-update.plist.example
livewire_node/: send_daily_update_failure_email.mjs
livewire_scripts/: backfill_intraday.py  backfill_runner.py  check_daily_update_watchdog.py  coverage_report.py  daily_update.py  data_quality_report.py  fetch_cboe_volatility.py  fetch_fred_rates.py  fetch_ib_historical.py  health_check.py  ingest_flatfiles.py  install_ibc_secure_service.py  intraday_update.py  rebuild_postgres_from_parquet.py  run_daily_update_job.py  run_ib_fetch_robust.py  start_ibc_gateway_keychain.py  sync_runner.py  sync_to_r2.py  universe_screener.py  warehouse_health_report.py  weekly_quality_summary.py
presets/: cmdty-metals.json  fx-pairs.json  r2k-energy.json  (+23 more)
(+81 files in other folders)
