[project]
name = "livewire"
version = "0.2.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "integration: marks tests that use real DuckDB (deselect with '-m \"not integration\"')",
    "postgres_live: marks tests that require MDW_TEST_POSTGRES_DSN and a disposable Postgres database",
]

[tool.coverage.run]
source = ["clients", "livewire_scripts", "scripts"]
omit = [
    "tests/*",
    "clients/ib_client.py",
    "clients/historical_provider.py",
    "livewire_scripts/probe_ib_intraday.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]
